--- a/index.html
+++ b/index.html
@@ -1,8 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>cis 223</title>
     <meta charset="utf-8" />
     <script src="script.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <h1>mid</h1>
+    <dl>
+      <dt>a. prompt</dt>
+      <dd><button type = "button" onclick = "promBt()">prompt</button><br>
+        you typed: <span id = "promR"></span></dd>
+      <br>
+      <dt>b. alert</dt>
+      <dd><input type = "button" onclick = "alerBt()" value = "alert"/></dd>
+      <br>
+      <dt>c. input</dt>
+      <dd><input type = "button" onclick = "inpuBt()" value = "input"/></dd>
+      <br>
+      <dt>d. button</dt>
+      <dd><button type = "button" onclick = "counBt()">click</button><br>
+        button has been clicked <span id = "counR">0</span></dd>
+    </dl>
+  </body>
 </html>
